--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "files": [
     "src"
   ],
+  "scripts": {
+    "prepare": "husky"
+  },
   "peerDependencies": {
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0"
@@ -32,7 +35,9 @@
     }
   },
   "devDependencies": {
-    "@joshunrau/prettier-config": "^4.0.2",
-    "eslint": "^8.57.0"
+    "@joshunrau/eslint-config": "^4.0.2",
+    "eslint": "^8.57.0",
+    "husky": "^9.0.11",
+    "prettier": "^3.2.5"
   }
 }
