--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@joshunrau/prettier-config",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@8.15.3",
   "description": "Prettier configuration for my personal projects",
   "author": "Joshua Unrau",
   "license": "MIT",
