--- a/package.json
+++ b/package.json
@@ -36,9 +36,16 @@
     }
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "@joshunrau/eslint-config": "^4.0.2",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
