--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   },
   "peerDependencies": {
     "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0"
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.13"
   },
   "peerDependenciesMeta": {
     "prettier-plugin-astro": {
+      "optional": true
+    },
+    "prettier-plugin-tailwindcss": {
       "optional": true
     }
   },
