ci: add repositoryUrl to release config

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "release": {
     "extends": [
       "@joshunrau/semantic-release-config"
-    ]
+    ],
+    "repositoryUrl": "https://github.com/joshunrau/prettier-config.git"
   }
 }
