--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,8 +24,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          cache: 'pnpm'
-          node-version: 'latest'
+          cache: pnpm
+          node-version: lts/*
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
       - name: Create Release
