--- a/package.json
+++ b/package.json
@@ -43,11 +43,10 @@
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@joshunrau/eslint-config": "^4.0.2",
-    "@joshunrau/semantic-release-config": "^0.0.1",
+    "@joshunrau/semantic-release": "^0.0.2",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
-    "prettier": "^3.2.5",
-    "semantic-release": "^23.0.6"
+    "prettier": "^3.2.5"
   },
   "commitlint": {
     "extends": [
@@ -56,8 +55,7 @@
   },
   "release": {
     "extends": [
-      "@joshunrau/semantic-release-config"
-    ],
-    "repositoryUrl": "https://github.com/joshunrau/prettier-config.git"
+      "@joshunrau/semantic-release"
+    ]
   }
 }
