feat: add prettier-pre-commit script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   ],
   "main": "src/index.js",
   "types": "src/index.d.ts",
+  "bin": {
+    "prettier-pre-commit": "./bin/prettier-pre-commit"
+  },
   "files": [
+    "bin",
     "src"
   ],
   "scripts": {
